--- a/app/src/main/res/layout/fragment_teacher_list.xml
+++ b/app/src/main/res/layout/fragment_teacher_list.xml
@@ -7,33 +7,20 @@
     android:paddingTop="@dimen/padding_medium"
     tools:context=".ui.homeUI.teacher.teacherList.TeacherListFragment">
 
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/cv_content"
-        android:layout_width="0dp"
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/sv_search"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/padding_medium"
-        android:backgroundTint="@color/white"
-        app:cardCornerRadius="20dp"
-        app:cardElevation="0dp"
-        app:layout_constraintBottom_toTopOf="@id/iv_filter"
+        android:background="@drawable/background_stroke"
+        android:focusable="true"
+        android:iconifiedByDefault="false"
+        android:queryHint="찾으시는 강사님이 있으신가요?"
+        app:iconifiedByDefault="false"
+        app:layout_constraintBottom_toTopOf="@+id/iv_filter"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:strokeColor="@color/primary"
-        app:strokeWidth="1dp">
-
-        <androidx.appcompat.widget.SearchView
-            android:id="@+id/sv_search"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:focusable="true"
-            android:iconifiedByDefault="false"
-            android:queryHint="찾으시는 강사님이 있으신가요?"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-    </com.google.android.material.card.MaterialCardView>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/iv_filter"
@@ -42,8 +29,8 @@
         android:layout_marginVertical="@dimen/padding_small"
         android:src="@drawable/baseline_filter_empty_24"
         app:layout_constraintBottom_toTopOf="@id/rv_teacher_list"
-        app:layout_constraintEnd_toEndOf="@id/cv_content"
-        app:layout_constraintTop_toBottomOf="@id/cv_content" />
+        app:layout_constraintEnd_toEndOf="@id/sv_search"
+        app:layout_constraintTop_toBottomOf="@id/sv_search" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_teacher_list"
