S11P12D210-18-3-5 feat: 1. 리스트 빈 화면 만듦 2. 바텀 네비 아래 빈공간 색칠 3. 바텀네비와 키보드 같이 올라오는 버그 수정 4. searchbar 전체  선택

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,7 +61,9 @@
         app:labelVisibilityMode="labeled"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
+        android:background="@color/bottomnav"
         app:menu="@menu/bottom" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
