--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="gray_20">#999999</color>
     <color name="gray_30">#808080</color>
     <color name="light_green">#F8FEFA</color>
+    <color name="bottomnav">#fef0f7</color>
 </resources>
