--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".ui.core.MainActivity">
 
-    <Toolbar
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/tb"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -25,7 +25,7 @@
             android:text="@string/app_name"
             android:textSize="20sp"
             android:textStyle="bold" />
-    </Toolbar>
+    </androidx.appcompat.widget.Toolbar>
 
     <View
         android:id="@+id/divider"
@@ -59,9 +59,9 @@
         app:itemActiveIndicatorStyle="@null"
         app:itemBackground="@android:color/transparent"
         app:labelVisibilityMode="labeled"
+        app:layout_constraintTop_toBottomOf="@id/fl"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         android:background="@color/bottomnav"
         app:menu="@menu/bottom" />
