--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -202,7 +202,13 @@
         android:id="@+id/registerVideoFragment"
         android:name="com.ssafy.yoganavi.ui.homeUI.myPage.registerVideo.RegisterVideoFragment"
         android:label="fragment_register_video"
-        tools:layout="@layout/fragment_register_video" />
+        tools:layout="@layout/fragment_register_video">
+        <argument
+            android:name="recordedId"
+            android:defaultValue="@null"
+            app:argType="string"
+            app:nullable="true" />
+    </fragment>
     <fragment
         android:id="@+id/liveFragment"
         android:name="com.ssafy.yoganavi.ui.homeUI.schedule.live.LiveFragment"
