--- a/app/src/main/res/layout/list_item_lecture_thumbnail.xml
+++ b/app/src/main/res/layout/list_item_lecture_thumbnail.xml
@@ -23,7 +23,7 @@
             android:id="@+id/iv_thumbnail"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="fitXY"
+            android:scaleType="centerCrop"
             tools:src="@color/gray_10" />
 
     </com.google.android.material.card.MaterialCardView>
