S11P12D210-86 : 임시 올리기

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -205,9 +205,8 @@
         tools:layout="@layout/fragment_register_video">
         <argument
             android:name="recordedId"
-            android:defaultValue="@null"
-            app:argType="string"
-            app:nullable="true" />
+            android:defaultValue="-1"
+            app:argType="integer" />
     </fragment>
     <fragment
         android:id="@+id/liveFragment"
