--- a/app/src/main/res/layout/custom_chapter_view.xml
+++ b/app/src/main/res/layout/custom_chapter_view.xml
@@ -57,13 +57,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/iv_video"
-        tools:layout_editor_absoluteX="66dp"
         android:inputType="text"
         android:padding="@dimen/padding_medium"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:background="@null"
-        android:textSize="@dimen/text_size_semi_large"
+        android:textSize="@dimen/text_medium_large"
         android:hint="@string/small_title_info" />
 
     <View
@@ -87,7 +86,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/divider"
         android:background="@null"
-        android:textSize="@dimen/text_size_semi_large"
+        android:textSize="@dimen/padding_medium"
         android:hint="@string/chapter_info" />
 
     <View
