--- a/app/src/main/res/layout/custom_chapter_view.xml
+++ b/app/src/main/res/layout/custom_chapter_view.xml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/tv_chapter"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:text="Chapter"
         android:padding="@dimen/padding_medium"
+        android:text="Chapter"
         android:textSize="@dimen/text_size_semi_large"
+        app:layout_constraintBottom_toTopOf="@id/iv_video"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -26,76 +25,82 @@
         android:padding="@dimen/text_medium"
         android:text="@string/delete"
         android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="@id/tv_chapter"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/tv_chapter"
-        app:layout_constraintBottom_toBottomOf="@id/tv_chapter"/>
+        app:layout_constraintTop_toTopOf="@id/tv_chapter" />
+
     <ImageView
-            android:id="@+id/iv_video"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:adjustViewBounds="true"
-            android:scaleType="centerCrop"
-            android:src="@drawable/gray"
-            app:layout_constraintDimensionRatio="4:3"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_chapter"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/click_video_info"
-            android:textSize="@dimen/text_medium"
-            app:drawableTopCompat="@drawable/video"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/tv_chapter"
-            app:layout_constraintBottom_toBottomOf="@id/et_title"            />
+        android:id="@+id/iv_video"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
+        android:src="@drawable/gray"
+        app:layout_constraintBottom_toTopOf="@id/et_title"
+        app:layout_constraintDimensionRatio="4:3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_chapter" />
+
+    <TextView
+        android:id="@+id/tv_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/click_video_info"
+        android:textSize="@dimen/text_medium"
+        app:drawableTopCompat="@drawable/video"
+        app:layout_constraintBottom_toBottomOf="@id/iv_video"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/iv_video" />
 
 
     <EditText
         android:id="@+id/et_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/iv_video"
+        android:background="@null"
+        android:hint="@string/small_title_info"
         android:inputType="text"
         android:padding="@dimen/padding_medium"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:background="@null"
         android:textSize="@dimen/text_medium_large"
-        android:hint="@string/small_title_info" />
+        app:layout_constraintBottom_toTopOf="@id/divider"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/iv_video" />
 
     <View
         android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="?android:attr/listDivider"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/et_content"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/et_title" />
 
     <EditText
         android:id="@+id/et_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@null"
         android:gravity="top"
-        tools:layout_editor_absoluteX="66dp"
+        android:hint="@string/chapter_info"
         android:inputType="textMultiLine"
         android:padding="@dimen/padding_medium"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="@dimen/text_medium"
+        app:layout_constraintBottom_toTopOf="@id/divider2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/divider"
-        android:background="@null"
-        android:textSize="@dimen/padding_medium"
-        android:hint="@string/chapter_info" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/divider" />
 
     <View
         android:id="@+id/divider2"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="?android:attr/listDivider"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/et_content" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
