--- a/app/src/main/res/layout/fragment_register_video.xml
+++ b/app/src/main/res/layout/fragment_register_video.xml
@@ -36,6 +36,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
+                android:id="@+id/tv_add_thumbnail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/click_thumbnail_info"
