--- a/app/src/main/res/layout/list_item_notice.xml
+++ b/app/src/main/res/layout/list_item_notice.xml
@@ -66,7 +66,7 @@
             android:paddingStart="@dimen/padding_medium"
             android:paddingBottom="@dimen/padding_medium"
             android:text="@string/edit"
-            android:textSize="16sp"
+            style="@style/BoldSmallText"
             app:layout_constraintEnd_toStartOf="@id/tv_deleteBtn"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -79,7 +79,7 @@
             android:paddingEnd="@dimen/padding_medium"
             android:paddingBottom="@dimen/padding_medium"
             android:text="@string/delete"
-            android:textSize="16sp"
+            style="@style/BoldSmallText"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/tv_editBtn" />
 
